compiler-tests/src/test/data/diagnostic/multibindings/IncompatibleMapValueType.fir.ir.diag.txt
/IncompatibleMapValueType.kt:(232,262): error: [Metro/MissingBinding] Cannot find an @Inject constructor or @Provides-annotated function/property for: kotlin.collections.Map<kotlin.String, kotlin.String>

    kotlin.collections.Map<kotlin.String, kotlin.String> is injected at
        [FooComponent] FooComponent.provideFoo(…, bar)
    kotlin.Int is requested at
        [FooComponent] FooComponent.value

(Hint)
A directly-provided 'Map<String, String>' binding exists, but direct Map bindings cannot satisfy 'Map<String, Function0<String>>' requests.

    IncompatibleMapValueType.kt:15:16
        @Provides bar: kotlin.collections.Map<kotlin.String, kotlin.String>
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Provider/Lazy-wrapped map values (e.g., Map<K, Provider<V>>) only work with a Map **multibinding** created with `@IntoMap` or `@Multibinds`.
